--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ export DB_PASSWORD="password"
 export DB_HOST="127.0.0.1"
 export DB_PORT="3306"
 export DB_NAME="registration_api" 
+export SECRET_JWT="H1M1T5U"
 export SERVER_PORT="8080"
 export AWS_REGION="ap-southeast-1"
 export ACCESS_KEY_IAM="AKIA4E3HTXNTSJW5BYVS"
